tests/snapshots/arttrie__grow_node48.snap
---
source: tests/arttrie_runner.rs
expression: transcript
---
> Start

trie:
  (empty)

root: None

> insert_bytes from=0 to=48 value="v"

trie:
  Node256 [p6s0] count=49 prefix=""
    '·'/0x00 ->
      Leaf [p2s0] key="\0" value="v"
    '·'/0x01 ->
      Leaf [p2s1] key="\u{1}" value="v"
    '·'/0x02 ->
      Leaf [p2s2] key="\u{2}" value="v"
    '·'/0x03 ->
      Leaf [p2s3] key="\u{3}" value="v"
    '·'/0x04 ->
      Leaf [p2s4] key="\u{4}" value="v"
    '·'/0x05 ->
      Leaf [p2s5] key="\u{5}" value="v"
    '·'/0x06 ->
      Leaf [p2s6] key="\u{6}" value="v"
    '·'/0x07 ->
      Leaf [p2s7] key="\u{7}" value="v"
    '·'/0x08 ->
      Leaf [p2s8] key="\u{8}" value="v"
    '·'/0x09 ->
      Leaf [p2s9] key="\t" value="v"
    '·'/0x0a ->
      Leaf [p2s10] key="\n" value="v"
    '·'/0x0b ->
      Leaf [p2s11] key="\u{b}" value="v"
    '·'/0x0c ->
      Leaf [p2s12] key="\u{c}" value="v"
    '·'/0x0d ->
      Leaf [p2s13] key="\r" value="v"
    '·'/0x0e ->
      Leaf [p2s14] key="\u{e}" value="v"
    '·'/0x0f ->
      Leaf [p2s15] key="\u{f}" value="v"
    '·'/0x10 ->
      Leaf [p2s16] key="\u{10}" value="v"
    '·'/0x11 ->
      Leaf [p2s17] key="\u{11}" value="v"
    '·'/0x12 ->
      Leaf [p2s18] key="\u{12}" value="v"
    '·'/0x13 ->
      Leaf [p2s19] key="\u{13}" value="v"
    '·'/0x14 ->
      Leaf [p2s20] key="\u{14}" value="v"
    '·'/0x15 ->
      Leaf [p2s21] key="\u{15}" value="v"
    '·'/0x16 ->
      Leaf [p2s22] key="\u{16}" value="v"
    '·'/0x17 ->
      Leaf [p2s23] key="\u{17}" value="v"
    '·'/0x18 ->
      Leaf [p2s24] key="\u{18}" value="v"
    '·'/0x19 ->
      Leaf [p2s25] key="\u{19}" value="v"
    '·'/0x1a ->
      Leaf [p2s26] key="\u{1a}" value="v"
    '·'/0x1b ->
      Leaf [p2s27] key="\u{1b}" value="v"
    '·'/0x1c ->
      Leaf [p2s28] key="\u{1c}" value="v"
    '·'/0x1d ->
      Leaf [p2s29] key="\u{1d}" value="v"
    '·'/0x1e ->
      Leaf [p2s30] key="\u{1e}" value="v"
    '·'/0x1f ->
      Leaf [p2s31] key="\u{1f}" value="v"
    ' '/0x20 ->
      Leaf [p2s32] key=" " value="v"
    '!'/0x21 ->
      Leaf [p2s33] key="!" value="v"
    '"'/0x22 ->
      Leaf [p2s34] key="\"" value="v"
    '#'/0x23 ->
      Leaf [p2s35] key="#" value="v"
    '$'/0x24 ->
      Leaf [p2s36] key="$" value="v"
    '%'/0x25 ->
      Leaf [p2s37] key="%" value="v"
    '&'/0x26 ->
      Leaf [p2s38] key="&" value="v"
    '''/0x27 ->
      Leaf [p2s39] key="'" value="v"
    '('/0x28 ->
      Leaf [p2s40] key="(" value="v"
    ')'/0x29 ->
      Leaf [p2s41] key=")" value="v"
    '*'/0x2a ->
      Leaf [p2s42] key="*" value="v"
    '+'/0x2b ->
      Leaf [p2s43] key="+" value="v"
    ','/0x2c ->
      Leaf [p2s44] key="," value="v"
    '-'/0x2d ->
      Leaf [p2s45] key="-" value="v"
    '.'/0x2e ->
      Leaf [p2s46] key="." value="v"
    '/'/0x2f ->
      Leaf [p2s47] key="/" value="v"
    '0'/0x30 ->
      Leaf [p2s48] key="0" value="v"

root: page=6 slot=0 size=8192

> get key="\0"

result: Some("v")
stats: nodes=2 inner=1 edges=1 prefix_bytes=0 leaf_compared=true

trie:
  Node256 [p6s0] count=49 prefix=""
    '·'/0x00 ->
      Leaf [p2s0] key="\0" value="v"
    '·'/0x01 ->
      Leaf [p2s1] key="\u{1}" value="v"
    '·'/0x02 ->
      Leaf [p2s2] key="\u{2}" value="v"
    '·'/0x03 ->
      Leaf [p2s3] key="\u{3}" value="v"
    '·'/0x04 ->
      Leaf [p2s4] key="\u{4}" value="v"
    '·'/0x05 ->
      Leaf [p2s5] key="\u{5}" value="v"
    '·'/0x06 ->
      Leaf [p2s6] key="\u{6}" value="v"
    '·'/0x07 ->
      Leaf [p2s7] key="\u{7}" value="v"
    '·'/0x08 ->
      Leaf [p2s8] key="\u{8}" value="v"
    '·'/0x09 ->
      Leaf [p2s9] key="\t" value="v"
    '·'/0x0a ->
      Leaf [p2s10] key="\n" value="v"
    '·'/0x0b ->
      Leaf [p2s11] key="\u{b}" value="v"
    '·'/0x0c ->
      Leaf [p2s12] key="\u{c}" value="v"
    '·'/0x0d ->
      Leaf [p2s13] key="\r" value="v"
    '·'/0x0e ->
      Leaf [p2s14] key="\u{e}" value="v"
    '·'/0x0f ->
      Leaf [p2s15] key="\u{f}" value="v"
    '·'/0x10 ->
      Leaf [p2s16] key="\u{10}" value="v"
    '·'/0x11 ->
      Leaf [p2s17] key="\u{11}" value="v"
    '·'/0x12 ->
      Leaf [p2s18] key="\u{12}" value="v"
    '·'/0x13 ->
      Leaf [p2s19] key="\u{13}" value="v"
    '·'/0x14 ->
      Leaf [p2s20] key="\u{14}" value="v"
    '·'/0x15 ->
      Leaf [p2s21] key="\u{15}" value="v"
    '·'/0x16 ->
      Leaf [p2s22] key="\u{16}" value="v"
    '·'/0x17 ->
      Leaf [p2s23] key="\u{17}" value="v"
    '·'/0x18 ->
      Leaf [p2s24] key="\u{18}" value="v"
    '·'/0x19 ->
      Leaf [p2s25] key="\u{19}" value="v"
    '·'/0x1a ->
      Leaf [p2s26] key="\u{1a}" value="v"
    '·'/0x1b ->
      Leaf [p2s27] key="\u{1b}" value="v"
    '·'/0x1c ->
      Leaf [p2s28] key="\u{1c}" value="v"
    '·'/0x1d ->
      Leaf [p2s29] key="\u{1d}" value="v"
    '·'/0x1e ->
      Leaf [p2s30] key="\u{1e}" value="v"
    '·'/0x1f ->
      Leaf [p2s31] key="\u{1f}" value="v"
    ' '/0x20 ->
      Leaf [p2s32] key=" " value="v"
    '!'/0x21 ->
      Leaf [p2s33] key="!" value="v"
    '"'/0x22 ->
      Leaf [p2s34] key="\"" value="v"
    '#'/0x23 ->
      Leaf [p2s35] key="#" value="v"
    '$'/0x24 ->
      Leaf [p2s36] key="$" value="v"
    '%'/0x25 ->
      Leaf [p2s37] key="%" value="v"
    '&'/0x26 ->
      Leaf [p2s38] key="&" value="v"
    '''/0x27 ->
      Leaf [p2s39] key="'" value="v"
    '('/0x28 ->
      Leaf [p2s40] key="(" value="v"
    ')'/0x29 ->
      Leaf [p2s41] key=")" value="v"
    '*'/0x2a ->
      Leaf [p2s42] key="*" value="v"
    '+'/0x2b ->
      Leaf [p2s43] key="+" value="v"
    ','/0x2c ->
      Leaf [p2s44] key="," value="v"
    '-'/0x2d ->
      Leaf [p2s45] key="-" value="v"
    '.'/0x2e ->
      Leaf [p2s46] key="." value="v"
    '/'/0x2f ->
      Leaf [p2s47] key="/" value="v"
    '0'/0x30 ->
      Leaf [p2s48] key="0" value="v"

root: page=6 slot=0 size=8192

> get key="0"

result: Some("v")
stats: nodes=2 inner=1 edges=1 prefix_bytes=0 leaf_compared=true

trie:
  Node256 [p6s0] count=49 prefix=""
    '·'/0x00 ->
      Leaf [p2s0] key="\0" value="v"
    '·'/0x01 ->
      Leaf [p2s1] key="\u{1}" value="v"
    '·'/0x02 ->
      Leaf [p2s2] key="\u{2}" value="v"
    '·'/0x03 ->
      Leaf [p2s3] key="\u{3}" value="v"
    '·'/0x04 ->
      Leaf [p2s4] key="\u{4}" value="v"
    '·'/0x05 ->
      Leaf [p2s5] key="\u{5}" value="v"
    '·'/0x06 ->
      Leaf [p2s6] key="\u{6}" value="v"
    '·'/0x07 ->
      Leaf [p2s7] key="\u{7}" value="v"
    '·'/0x08 ->
      Leaf [p2s8] key="\u{8}" value="v"
    '·'/0x09 ->
      Leaf [p2s9] key="\t" value="v"
    '·'/0x0a ->
      Leaf [p2s10] key="\n" value="v"
    '·'/0x0b ->
      Leaf [p2s11] key="\u{b}" value="v"
    '·'/0x0c ->
      Leaf [p2s12] key="\u{c}" value="v"
    '·'/0x0d ->
      Leaf [p2s13] key="\r" value="v"
    '·'/0x0e ->
      Leaf [p2s14] key="\u{e}" value="v"
    '·'/0x0f ->
      Leaf [p2s15] key="\u{f}" value="v"
    '·'/0x10 ->
      Leaf [p2s16] key="\u{10}" value="v"
    '·'/0x11 ->
      Leaf [p2s17] key="\u{11}" value="v"
    '·'/0x12 ->
      Leaf [p2s18] key="\u{12}" value="v"
    '·'/0x13 ->
      Leaf [p2s19] key="\u{13}" value="v"
    '·'/0x14 ->
      Leaf [p2s20] key="\u{14}" value="v"
    '·'/0x15 ->
      Leaf [p2s21] key="\u{15}" value="v"
    '·'/0x16 ->
      Leaf [p2s22] key="\u{16}" value="v"
    '·'/0x17 ->
      Leaf [p2s23] key="\u{17}" value="v"
    '·'/0x18 ->
      Leaf [p2s24] key="\u{18}" value="v"
    '·'/0x19 ->
      Leaf [p2s25] key="\u{19}" value="v"
    '·'/0x1a ->
      Leaf [p2s26] key="\u{1a}" value="v"
    '·'/0x1b ->
      Leaf [p2s27] key="\u{1b}" value="v"
    '·'/0x1c ->
      Leaf [p2s28] key="\u{1c}" value="v"
    '·'/0x1d ->
      Leaf [p2s29] key="\u{1d}" value="v"
    '·'/0x1e ->
      Leaf [p2s30] key="\u{1e}" value="v"
    '·'/0x1f ->
      Leaf [p2s31] key="\u{1f}" value="v"
    ' '/0x20 ->
      Leaf [p2s32] key=" " value="v"
    '!'/0x21 ->
      Leaf [p2s33] key="!" value="v"
    '"'/0x22 ->
      Leaf [p2s34] key="\"" value="v"
    '#'/0x23 ->
      Leaf [p2s35] key="#" value="v"
    '$'/0x24 ->
      Leaf [p2s36] key="$" value="v"
    '%'/0x25 ->
      Leaf [p2s37] key="%" value="v"
    '&'/0x26 ->
      Leaf [p2s38] key="&" value="v"
    '''/0x27 ->
      Leaf [p2s39] key="'" value="v"
    '('/0x28 ->
      Leaf [p2s40] key="(" value="v"
    ')'/0x29 ->
      Leaf [p2s41] key=")" value="v"
    '*'/0x2a ->
      Leaf [p2s42] key="*" value="v"
    '+'/0x2b ->
      Leaf [p2s43] key="+" value="v"
    ','/0x2c ->
      Leaf [p2s44] key="," value="v"
    '-'/0x2d ->
      Leaf [p2s45] key="-" value="v"
    '.'/0x2e ->
      Leaf [p2s46] key="." value="v"
    '/'/0x2f ->
      Leaf [p2s47] key="/" value="v"
    '0'/0x30 ->
      Leaf [p2s48] key="0" value="v"

root: page=6 slot=0 size=8192

> get key="1"

result: None
stats: nodes=1 inner=1 edges=0 prefix_bytes=0 leaf_compared=false

trie:
  Node256 [p6s0] count=49 prefix=""
    '·'/0x00 ->
      Leaf [p2s0] key="\0" value="v"
    '·'/0x01 ->
      Leaf [p2s1] key="\u{1}" value="v"
    '·'/0x02 ->
      Leaf [p2s2] key="\u{2}" value="v"
    '·'/0x03 ->
      Leaf [p2s3] key="\u{3}" value="v"
    '·'/0x04 ->
      Leaf [p2s4] key="\u{4}" value="v"
    '·'/0x05 ->
      Leaf [p2s5] key="\u{5}" value="v"
    '·'/0x06 ->
      Leaf [p2s6] key="\u{6}" value="v"
    '·'/0x07 ->
      Leaf [p2s7] key="\u{7}" value="v"
    '·'/0x08 ->
      Leaf [p2s8] key="\u{8}" value="v"
    '·'/0x09 ->
      Leaf [p2s9] key="\t" value="v"
    '·'/0x0a ->
      Leaf [p2s10] key="\n" value="v"
    '·'/0x0b ->
      Leaf [p2s11] key="\u{b}" value="v"
    '·'/0x0c ->
      Leaf [p2s12] key="\u{c}" value="v"
    '·'/0x0d ->
      Leaf [p2s13] key="\r" value="v"
    '·'/0x0e ->
      Leaf [p2s14] key="\u{e}" value="v"
    '·'/0x0f ->
      Leaf [p2s15] key="\u{f}" value="v"
    '·'/0x10 ->
      Leaf [p2s16] key="\u{10}" value="v"
    '·'/0x11 ->
      Leaf [p2s17] key="\u{11}" value="v"
    '·'/0x12 ->
      Leaf [p2s18] key="\u{12}" value="v"
    '·'/0x13 ->
      Leaf [p2s19] key="\u{13}" value="v"
    '·'/0x14 ->
      Leaf [p2s20] key="\u{14}" value="v"
    '·'/0x15 ->
      Leaf [p2s21] key="\u{15}" value="v"
    '·'/0x16 ->
      Leaf [p2s22] key="\u{16}" value="v"
    '·'/0x17 ->
      Leaf [p2s23] key="\u{17}" value="v"
    '·'/0x18 ->
      Leaf [p2s24] key="\u{18}" value="v"
    '·'/0x19 ->
      Leaf [p2s25] key="\u{19}" value="v"
    '·'/0x1a ->
      Leaf [p2s26] key="\u{1a}" value="v"
    '·'/0x1b ->
      Leaf [p2s27] key="\u{1b}" value="v"
    '·'/0x1c ->
      Leaf [p2s28] key="\u{1c}" value="v"
    '·'/0x1d ->
      Leaf [p2s29] key="\u{1d}" value="v"
    '·'/0x1e ->
      Leaf [p2s30] key="\u{1e}" value="v"
    '·'/0x1f ->
      Leaf [p2s31] key="\u{1f}" value="v"
    ' '/0x20 ->
      Leaf [p2s32] key=" " value="v"
    '!'/0x21 ->
      Leaf [p2s33] key="!" value="v"
    '"'/0x22 ->
      Leaf [p2s34] key="\"" value="v"
    '#'/0x23 ->
      Leaf [p2s35] key="#" value="v"
    '$'/0x24 ->
      Leaf [p2s36] key="$" value="v"
    '%'/0x25 ->
      Leaf [p2s37] key="%" value="v"
    '&'/0x26 ->
      Leaf [p2s38] key="&" value="v"
    '''/0x27 ->
      Leaf [p2s39] key="'" value="v"
    '('/0x28 ->
      Leaf [p2s40] key="(" value="v"
    ')'/0x29 ->
      Leaf [p2s41] key=")" value="v"
    '*'/0x2a ->
      Leaf [p2s42] key="*" value="v"
    '+'/0x2b ->
      Leaf [p2s43] key="+" value="v"
    ','/0x2c ->
      Leaf [p2s44] key="," value="v"
    '-'/0x2d ->
      Leaf [p2s45] key="-" value="v"
    '.'/0x2e ->
      Leaf [p2s46] key="." value="v"
    '/'/0x2f ->
      Leaf [p2s47] key="/" value="v"
    '0'/0x30 ->
      Leaf [p2s48] key="0" value="v"

root: page=6 slot=0 size=8192
