tests/snapshots/arttrie__insert_get.snap
---
source: tests/arttrie_runner.rs
expression: transcript
---
> Start

trie:
  (empty)

root: None
page_count: 1
page_size: 65536
dirty: []
dirties_before_flush: 16
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 16

> insert key="hello" value="world"

trie:
  Leaf [p2s0] key="hello" value="world"

root: page=2 slot=0 size=64
page_count: 3
page_size: 65536
dirty: [0, 1, 2]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

> get key="hello"

result: Some("world")
stats: nodes=1 inner=0 edges=0 prefix_bytes=0 leaf_compared=true

trie:
  Leaf [p2s0] key="hello" value="world"

root: page=2 slot=0 size=64
page_count: 3
page_size: 65536
dirty: [0, 1, 2]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

> get key="missing"

result: None
stats: nodes=1 inner=0 edges=0 prefix_bytes=0 leaf_compared=true

trie:
  Leaf [p2s0] key="hello" value="world"

root: page=2 slot=0 size=64
page_count: 3
page_size: 65536
dirty: [0, 1, 2]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 68 65 6c 6c 6f 00 00 00  |hello...|
slot[1]: 77 6f 72 6c 64 00 00 00  |world...|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 05 00 00 00 05 00 00 00 05 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
