tests/snapshots/arttrie__long_prefix.snap
---
source: tests/arttrie_runner.rs
expression: transcript
---
> Start

trie:
  (empty)

root: None
page_count: 1
page_size: 65536
dirty: []
dirties_before_flush: 16
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 16

> insert key="abcdefghij_left" value="L"

trie:
  Leaf [p3s0] key="abcdefghij_left" value="L"

root: page=3 slot=0 size=64
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [2]
  class 4 (16B): [1]
  class 6 (64B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=4, slot_size=16, slots=4062, bitmap_bytes=508) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 61 62 63 64 65 66 67 68 69 6a 5f 6c 65 66 74 00  |abcdefghij_left.|

=== page 2 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 4c 00 00 00 00 00 00 00  |L.......|

=== page 3 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 05 00 00 00 0f 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................................................................|

> insert key="abcdefghij_right" value="R"

trie:
  Node4 [p4s0] count=2 prefix="abcdefghij_"
    'l'/0x6c ->
      Leaf [p3s0] key="abcdefghij_left" value="L"
    'r'/0x72 ->
      Leaf [p3s1] key="abcdefghij_right" value="R"

root: page=4 slot=0 size=256
page_count: 5
page_size: 65536
dirty: [0, 1, 2, 3, 4]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [2]
  class 4 (16B): [1]
  class 6 (64B): [3]
  class 8 (256B): [4]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=4, slot_size=16, slots=4062, bitmap_bytes=508) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 61 62 63 64 65 66 67 68 69 6a 5f 6c 65 66 74 00  |abcdefghij_left.|
slot[1]: 61 62 63 64 65 66 67 68 69 6a 5f 72 69 67 68 74  |abcdefghij_right|

=== page 2 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 4c 00 00 00 00 00 00 00  |L.......|
slot[1]: 52 00 00 00 00 00 00 00  |R.......|

=== page 3 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 05 00 00 00 0f 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 10 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

=== page 4 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 02 0b 00 61 62 63 64 65 66 67 68 69 6a 5f 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 72 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....abcdefghij_.....................................................lr..@.......................@...............................................................................................................................................................|

> get key="abcdefghij_left"

result: Some("L")
stats: nodes=2 inner=1 edges=1 prefix_bytes=11 leaf_compared=true

trie:
  Node4 [p4s0] count=2 prefix="abcdefghij_"
    'l'/0x6c ->
      Leaf [p3s0] key="abcdefghij_left" value="L"
    'r'/0x72 ->
      Leaf [p3s1] key="abcdefghij_right" value="R"

root: page=4 slot=0 size=256
page_count: 5
page_size: 65536
dirty: [0, 1, 2, 3, 4]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [2]
  class 4 (16B): [1]
  class 6 (64B): [3]
  class 8 (256B): [4]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=4, slot_size=16, slots=4062, bitmap_bytes=508) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 61 62 63 64 65 66 67 68 69 6a 5f 6c 65 66 74 00  |abcdefghij_left.|
slot[1]: 61 62 63 64 65 66 67 68 69 6a 5f 72 69 67 68 74  |abcdefghij_right|

=== page 2 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 4c 00 00 00 00 00 00 00  |L.......|
slot[1]: 52 00 00 00 00 00 00 00  |R.......|

=== page 3 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 05 00 00 00 0f 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 10 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

=== page 4 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 02 0b 00 61 62 63 64 65 66 67 68 69 6a 5f 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 72 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....abcdefghij_.....................................................lr..@.......................@...............................................................................................................................................................|

> get key="abcdefghij_right"

result: Some("R")
stats: nodes=2 inner=1 edges=1 prefix_bytes=11 leaf_compared=true

trie:
  Node4 [p4s0] count=2 prefix="abcdefghij_"
    'l'/0x6c ->
      Leaf [p3s0] key="abcdefghij_left" value="L"
    'r'/0x72 ->
      Leaf [p3s1] key="abcdefghij_right" value="R"

root: page=4 slot=0 size=256
page_count: 5
page_size: 65536
dirty: [0, 1, 2, 3, 4]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [2]
  class 4 (16B): [1]
  class 6 (64B): [3]
  class 8 (256B): [4]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=4, slot_size=16, slots=4062, bitmap_bytes=508) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 61 62 63 64 65 66 67 68 69 6a 5f 6c 65 66 74 00  |abcdefghij_left.|
slot[1]: 61 62 63 64 65 66 67 68 69 6a 5f 72 69 67 68 74  |abcdefghij_right|

=== page 2 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 4c 00 00 00 00 00 00 00  |L.......|
slot[1]: 52 00 00 00 00 00 00 00  |R.......|

=== page 3 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 05 00 00 00 0f 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 10 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

=== page 4 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 02 0b 00 61 62 63 64 65 66 67 68 69 6a 5f 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 72 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....abcdefghij_.....................................................lr..@.......................@...............................................................................................................................................................|

> get key="abcdefghij_mid"

result: None
stats: nodes=1 inner=1 edges=0 prefix_bytes=11 leaf_compared=false

trie:
  Node4 [p4s0] count=2 prefix="abcdefghij_"
    'l'/0x6c ->
      Leaf [p3s0] key="abcdefghij_left" value="L"
    'r'/0x72 ->
      Leaf [p3s1] key="abcdefghij_right" value="R"

root: page=4 slot=0 size=256
page_count: 5
page_size: 65536
dirty: [0, 1, 2, 3, 4]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [2]
  class 4 (16B): [1]
  class 6 (64B): [3]
  class 8 (256B): [4]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=4, slot_size=16, slots=4062, bitmap_bytes=508) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 61 62 63 64 65 66 67 68 69 6a 5f 6c 65 66 74 00  |abcdefghij_left.|
slot[1]: 61 62 63 64 65 66 67 68 69 6a 5f 72 69 67 68 74  |abcdefghij_right|

=== page 2 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 4c 00 00 00 00 00 00 00  |L.......|
slot[1]: 52 00 00 00 00 00 00 00  |R.......|

=== page 3 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 05 00 00 00 0f 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 10 00 00 00 01 00 00 00 00 00 00 00 10 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

=== page 4 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 02 0b 00 61 62 63 64 65 66 67 68 69 6a 5f 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 6c 72 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....abcdefghij_.....................................................lr..@.......................@...............................................................................................................................................................|
